# toboggan

./: .git-plop.toml  .gitignore  .mise.toml  .spectral.yaml  .swiftlint.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SWIFTLINT_SETUP.md  instruction.md  riir.toml  rustfmt.toml  swift-check.py  test_uniffi.swift
.mise-tasks/: check  fix  lint  openapi  serve  test  test:ios
TobogganApp/: .gitignore  README.md  TobogganApp-Bridging-Header.h  xc-universal-binary.sh
examples/: README.md  humantime_config.toml  riir-flat-newyear.toml  riir-flat-output.toml  riir-flat.md  riir-folder-christmas.toml  riir-folder-no-date.toml  (+2 more)
toboggan-cli/: Cargo.toml  README.md
toboggan-cli/examples/: parse_slide.rs  slide.md
toboggan-cli/src/: available_themes.txt  display.rs  error.rs  lib.rs  main.rs  print.css  settings.rs  stats.rs
toboggan-cli/src/output/: binary.rs  html.rs  mod.rs  renderer.rs  text.rs
toboggan-cli/src/parser/: comments.rs  config.rs  content.rs  directory.rs  flat.rs  folder.rs  mod.rs  renderer.rs  utils.rs
toboggan-cli/test_slides/: readme.txt
toboggan-client/: Cargo.toml
toboggan-client/examples/: test_client.rs
toboggan-client/src/: api.rs  client.rs  communication.rs  config.rs  lib.rs  notification.rs
toboggan-client/src/async/: api.rs  communication.rs  mod.rs
toboggan-client/src/sync/: api.rs  communication.rs
toboggan-core/: Cargo.toml  README.md  instruction.md  plan.md
toboggan-core/src/: client.rs  command.rs  config.rs  content.rs  lib.rs  notification.rs  slide.rs  slide_id.rs  state.rs  state_debug.rs  talk.rs  time.rs  timeouts.rs
toboggan-desktop/: Cargo.toml  plan.md
toboggan-desktop/src/: app.rs  config.rs  constants.rs  icons.rs  lib.rs  main.rs  message.rs  messages.rs  state.rs  styles.rs  widgets.rs
toboggan-desktop/src/services/: mod.rs  slide_client.rs  websocket.rs
toboggan-desktop/src/ui/: content_renderer.rs  mod.rs  slide_view.rs
toboggan-desktop/src/views/: content.rs  footer.rs  help.rs  mod.rs  sidebar.rs  slide.rs
toboggan-editor/: Cargo.toml
toboggan-editor/resources/: slide.css
toboggan-editor/src/: app.rs  icons.rs  lib.rs  main.rs
toboggan-editor/src/actions/: mod.rs
toboggan-editor/src/state/: editor_state.rs  history.rs  mod.rs  selection.rs  talk_state.rs
toboggan-editor/src/ui/: mod.rs  status_bar.rs  toolbar.rs
toboggan-editor/src/ui/components/: mod.rs
toboggan-editor/src/ui/dialogs/: mod.rs
toboggan-editor/src/ui/panels/: editor.rs  inspector.rs  mod.rs  outline.rs
toboggan-esp32/: .mise.toml  Cargo.toml  build.rs  dev.md  driver-touch.md  notes.md  sdkconfig.defaults  spec.md
toboggan-esp32/.helix/: languages.toml
toboggan-esp32/src/: api.rs  config.rs  display.rs  display_manager.rs  led.rs  lib.rs  main.rs  state.rs  websocket.rs  wifi.rs
toboggan-ios/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  Package.swift  README.md  SWIFT_LINTING.md  build.rs  build.sh  plan.md  uniffi-bindgen.rs
toboggan-ios/.build/arm64-apple-macosx/debug/index/db/v13/saved/: lock.mdb
toboggan-ios/TobogganApp/App/: ContentView.swift  TobogganApp.swift
toboggan-ios/TobogganApp/Resources/: Info.plist
toboggan-ios/TobogganApp/Utils/: Constants.swift  Extensions.swift  MockTypes.swift
toboggan-ios/TobogganApp/ViewModels/: PresentationViewModel.swift
toboggan-ios/TobogganApp/Views/: ControlsView.swift  PresentationView.swift  SlideView.swift  StatusBarView.swift
toboggan-ios/examples/: test.rs  test_ios.rs
toboggan-ios/src/: client.rs  lib.rs  main.rs  notif.rs  slide.rs  talk.rs  toboggan.udl
toboggan-mobile/: Cargo.toml  README.md  build.rs
toboggan-mobile/examples/: test_ios.rs
toboggan-mobile/src/: client.rs  handler.rs  lib.rs  notif.rs  slide.rs  talk.rs  toboggan.udl  types.rs
toboggan-py/: Cargo.toml  README.md  example.py  pyproject.toml  toboggan_py.pyi
toboggan-py/src/: client_info.rs  lib.rs  slides.rs  state.rs  talk.rs  toboggan.rs
toboggan-server/: Cargo.toml  README.md  build.rs  openapi.json  openapi.yml  plan.md  riir.toml  talk.toml
toboggan-server/examples/: generate_toml.rs
toboggan-server/src/: bootstrap.rs  error.rs  lib.rs  main.rs  settings.rs  state.rs  state_tests.rs  static_assets.rs  watcher.rs
toboggan-server/src/domain/: health.rs  mod.rs  slides.rs  talk.rs
toboggan-server/src/dto/: health.rs  mod.rs
toboggan-server/src/router/: mod.rs  responses.rs  static_assets.rs  ws.rs
toboggan-server/src/router/api/: mod.rs
toboggan-server/src/services/: mod.rs
toboggan-server/src/services/client/: mod.rs  repository.rs
toboggan-server/src/services/talk/: mod.rs
toboggan-server/tests/: generate_openapi.rs  multi_client_sync.rs  state_serialization.rs
toboggan-server/tests/common/: mod.rs
toboggan-stats/: Cargo.toml
toboggan-stats/src/: analysis.rs  html.rs  lib.rs  slide_stats.rs
toboggan-tui/: Cargo.toml  plan.md
toboggan-tui/src/: app.rs  config.rs  connection_handler.rs  events.rs  lib.rs  main.rs  state.rs  terminal.rs  websocket.rs
toboggan-tui/src/ui/: mod.rs  styles.rs
toboggan-tui/src/ui/widgets/: current_slide.rs  help_panel.rs  mod.rs  next_slide_preview.rs  progress_bar.rs  slide_list.rs  speaker_notes.rs  title_bar.rs  top_bar.rs
toboggan-wasm/: Cargo.toml  README.md  build.sh  index.html
toboggan-wasm/src/: lib.rs
toboggan-web/toboggan-wasm/: .gitignore  Cargo.toml  README.md  bacon.toml
toboggan-web/toboggan-wasm/.helix/: languages.toml
toboggan-web/toboggan-wasm/src/: app.rs  config.rs  lib.rs
toboggan-web/toboggan-wasm/src/components/: mod.rs
toboggan-web/toboggan-wasm/src/components/footer/: mod.rs  style.css
toboggan-web/toboggan-wasm/src/components/navigation/: mod.rs  style.css
toboggan-web/toboggan-wasm/src/components/slide/: mod.rs  style.css
toboggan-web/toboggan-wasm/src/components/toast/: mod.rs  style.css
toboggan-web/toboggan-wasm/src/services/: api.rs  communication.rs  keyboard.rs  mod.rs
toboggan-web/toboggan-wasm/src/utils/: audio.rs  components.rs  dom.rs  errors.rs  mod.rs  render.rs  timer.rs
toboggan-web/toboggan-wasm/src/utils/icons/: mod.rs
(+145 files in other folders)
