[workspace]
members = [
  "toboggan-core",
  "toboggan-stats",
  "toboggan-server",
  "toboggan-cli",
  "toboggan-client",
  "toboggan-tui",
  "toboggan-desktop",
  "toboggan-mobile",
  "toboggan-editor",
]
exclude = ["toboggan-py"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
repository = "https://github.com/ilaborie/toboggan"

[workspace.dependencies]
# Core dependencies
derive_more = { version = "2.1.1", default-features = false }
jiff = { version = "0.2.17", default-features = false }
serde = { version = "1.0.219", default-features = false }
uuid = { version = "1.18.1", default-features = false }
humantime = "2.1.0"
getrandom = "0.3.4"

# Server dependencies
axum = "0.8.8"
tokio = "1.48.0"
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
clap = "4.5.53"
anyhow = "1.0.100"
serde_json = "1.0.148"
serde-saphyr = "0.0.12"
tower-http = "0.6.8"
futures = "0.3.31"
dashmap = "6.1.0"
slotmap = "1.1.1"

# OpenAPI dependencies
utoipa = "5.4.0"
utoipa-scalar = "0.3.0"

# Dev dependencies
clawspec-core = "0.4.1"
tempfile = "3.24.0"

# Other dependencies
comrak = "0.49.0"
miette = "7.6.0"
comfy-table = "7.2.1"

# Desktop dependencies
iced = "0.14.0"
tokio-tungstenite = { version = "0.28.0", default-features = false }
reqwest = { version = "0.13.1", default-features = false }
lucide-icons = "0.562.0"
async-stream = "0.3.6"

# Other dependencies
scraper = "0.25.0"

# Editor dependencies
gpui = "0.2"
gpui-component = "0.5.0"
rfd = "0.16.0"
html-escape = "0.2"

# Server-specific dependencies
rust-embed = "8.9.0"
mime_guess = "2.0.5"
notify = "8.2.0"

# CLI-specific dependencies
owo-colors = "4.2.3"

# TUI-specific dependencies
ratatui = "0.30.0"
crossterm = "0.29.0"
tui-logger = "0.18.0"

# Mobile-specific dependencies (iOS & Android)
uniffi = "0.30.0"


[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "allow"

[workspace.lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = "deny"

dbg_macro = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
large_include_file = "warn"
min_ident_chars = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"

missing-errors-doc = "allow"
module_name_repetitions = "allow"
