[package]
name = "toboggan-cli"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
toboggan-core = {path = "../toboggan-core"}

toml = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["env", "derive"] }
anyhow = {workspace = true}
serde_json = {workspace = true}
jiff = {workspace = true}
derive_more = { workspace = true, features = ["full"] }
pulldown-cmark = {workspace = true}

[lints]
workspace = true
