[package]
name = "toboggan-cli"
version = "0.1.0"
edition.workspace = true
description = "Command-line interface for creating and converting Toboggan presentation files"
keywords = ["presentation", "slides", "markdown", "toml", "cli"]
categories = ["command-line-utilities", "text-processing"]
repository = "https://github.com/ilaborie/toboggan"
documentation = "https://docs.rs/toboggan-cli"
readme = "README.md"
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "toboggan-cli"
path = "src/main.rs"

[dependencies]
toboggan-core = {path = "../toboggan-core", features = ["std"]}

toml = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["env", "derive"] }
anyhow = {workspace = true}
comrak = {workspace = true}
regex = {workspace = true}

[lints]
workspace = true
