[package]
name = "toboggan-client"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
toboggan-core = {path = "../toboggan-core", features = ["std"]}

tracing = {workspace = true}
tokio= { workspace = true, features = ["sync", "time"] }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
derive_more = { workspace = true, features = ["from", "error", "display"] }

[dev-dependencies]
tokio= { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
