[package]
name = "toboggan-client"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["async"]
async = ["dep:tokio", "dep:tokio-tungstenite", "dep:futures", "dep:reqwest"]
sync = ["dep:ureq", "dep:tungstenite"]

[dependencies]
toboggan-core = {path = "../toboggan-core", features = ["std"]}

tracing = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true, features = ["from", "error", "display"] }

# Async dependencies (only available with async feature)
tokio = { workspace = true, features = ["sync", "time"], optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json"], optional = true }

# Sync dependencies (only available with sync feature)
ureq = { version = "2.12.1", features = ["json"], optional = true }
tungstenite = { version = "0.27.0", optional = true }

[dev-dependencies]
tokio= { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
