[package]
name = "toboggan-core"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std"]
std = ["alloc", "jiff/std", "serde/std", "comrak", "humantime"]
alloc = ["jiff/alloc", "serde/alloc", "getrandom"]
js = ["jiff/js", "getrandom/js", "uuid/js"]
openapi = ["utoipa"]
test-utils = []

[dependencies]
jiff = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }
getrandom = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
comrak = { workspace = true, optional = true }
derive_more = {workspace = true, features = ["add", "from"]}
humantime = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
