[package]
name = "toboggan-core"
version = "0.1.0"
edition = "2024"

rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["std", "tracing"]
tracing = ["dep:tracing"]
std = ["jiff/std", "serde/std", "comrak"]
js = ["jiff/js", "uuid/js"]
openapi = ["dep:utoipa"]
test-utils = []

[dependencies]
jiff = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true, features = ["serde", "v4"] }
derive_more = { workspace = true, features = ["add", "from", "deref"] }
humantime = { workspace = true }
getrandom = { workspace = true }

tracing = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
comrak = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
