[package]
name = "toboggan-esp32"
version = "0.1.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.88"

[[bin]]
name = "toboggan-esp32"
harness = false    # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = "1.0.99"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
esp-idf-svc = { version = "0.51.0", features = [
    "alloc",
    "experimental",
] }
embedded-svc = "0.28.1"
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
heapless = "0.8.0"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
# embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.1.0" }

[lints.rust]
missing_docs = "allow"

[lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = "deny"

dbg_macro = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
large_include_file = "warn"
min_ident_chars = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"

new_without_default = "allow"
module_name_repetitions = "allow"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
