[package]
name = "toboggan-esp32"
version = "0.1.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.88"

[workspace]

[[bin]]
name = "toboggan-esp32"
harness = false    # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = "1.0.99"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
esp-idf-svc = { version = "0.51.0", features = [
    "alloc",
    "experimental",
] }
embedded-svc = "0.28.1"
embedded-graphics = "0.8.1"
mipidsi = "0.9.0"
heapless = "0.8.0"

[build-dependencies]
embuild = "0.33"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_websocket_client", version = "1.1.0" }

[lints.rust]
missing_docs = "allow"

[lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = "deny"

dbg_macro = "warn"
expect_used = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
large_include_file = "warn"
min_ident_chars = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"

new_without_default = "allow"
module_name_repetitions = "allow"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"
