[package]
name = "toboggan-ios"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
repository = "https://github.com/ilaborie/toboggan"


[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "toboggan"

[[bin]]
name = "uniffi-bindgen"
path = "./uniffi-bindgen.rs"

[[bin]]
name = "uniffi-bindgen-swift"
path = "./uniffi-bindgen-swift.rs"


[dependencies]
toboggan-core = { path = "../toboggan-core", features = ["std"] }
toboggan-client = { path = "../toboggan-client" }

uniffi = { version = "0.29.4", features = ["cli"] }
derive_more = { version = "2.0.1", features = ["error", "display", "from"] }
tracing = "0.1.41"
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }


[lints.rust]
missing_docs = "allow"

[lints.clippy]
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

undocumented_unsafe_blocks = "deny"

dbg_macro = "warn"
if_then_some_else_none = "warn"
indexing_slicing = "warn"
large_include_file = "warn"
min_ident_chars = "warn"

rc_buffer = "warn"
rc_mutex = "warn"
unnecessary_safety_doc = "warn"
unwrap_used = "warn"

missing_panics_doc = "allow"
new_without_default = "allow"
module_name_repetitions = "allow"
