[package]
name = "toboggan-py"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Igor Laborie <ilaborie@gmail.com>"]
repository = "https://github.com/ilaborie/toboggan"

[lib]
name = "toboggan_py"
crate-type = ["cdylib"]

[dependencies]
toboggan-core = { path = "../toboggan-core", default_feature = false, features = ["std"] }
toboggan-client = { path = "../toboggan-client" }

pyo3 = {version = "0.27.0", features = ["abi3-py38"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "sync", "macros"] }
