[package]
name = "toboggan-server"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
toboggan-core = {path = "../toboggan-core", features = ["openapi"]}

axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["full"] }
toml = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["env", "derive"] }
anyhow = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
jiff = {workspace = true}
derive_more = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
futures = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
clawspec-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
utoipa = { workspace = true }
tokio-tungstenite = "0.21"

[lints]
workspace = true
