[package]
name = "toboggan-stats"
version = "0.1.0"
edition.workspace = true
description = "Statistics computation for Toboggan presentations"
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
toboggan-core = {path = "../toboggan-core", features = ["std"]}
scraper = {workspace = true}

[lints]
workspace = true
