[package]
name = "toboggan-tui"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
toboggan-core = {path = "../toboggan-core", features = ["std"]}
toboggan-client = {path = "../toboggan-client"}

ratatui = "0.29"
crossterm = "0.28.1"
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["env", "derive"] }
futures = { workspace = true }
tracing= { workspace = true }
tracing-subscriber= { workspace = true }
tui-logger = { version = "0.17.3", features = ["tracing-support"]}
serde = { workspace = true, features = ["derive"] }
derive_more = { workspace = true, features = ["display"] }

[lints]
workspace = true
