[package]
name = "toboggan-wasm"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
toboggan-core = { path = "../toboggan-core", features = ["alloc", "js"] }
wasm-bindgen = "0.2"
gloo = { version = "0.11", features = ["timers", "events", "utils"] }
web-sys = { version = "0.3", features = [
  "HtmlElement",
  "KeyboardEvent", 
  "Event",
  "WebSocket",
  "MessageEvent",
  "CssStyleDeclaration",
  "Performance",
  "Window",
  "Document"
] }
js-sys = "0.3"
serde_json = "1.0"
# Removed wee_alloc - deprecated and default allocator is now better

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

# Add test dependencies
[dev-dependencies]
wasm-bindgen-test = "0.3"

# Size optimizations
[profile.release]
opt-level = "z"     # Optimize for size even more aggressively
lto = "fat"         # More aggressive LTO
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller panic handling
strip = true        # Strip symbols for smaller size

[lints.clippy]
# No longer need to allow unsafe code since we eliminated it
# unsafe_code = "allow"
