[package]
name = "toboggan-wasm"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
toboggan-core = { path = "../toboggan-core", features = ["alloc", "js"] }
wasm-bindgen = "0.2.100"
gloo = { version = "0.11.0", features = ["timers", "events", "utils"] }
web-sys = { version = "0.3.77", features = [
  "HtmlElement",
  "KeyboardEvent", 
  "Event",
  "WebSocket",
  "MessageEvent",
  "CssStyleDeclaration",
  "Performance",
  "Window",
  "Document"
] }
js-sys = "0.3.77"
serde_json = "1.0.140"
regex = "1.11"
once_cell = "1.21"
# Removed wee_alloc - deprecated and default allocator is now better

[dependencies.getrandom]
version = "0.2.16"
features = ["js"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

# Add test dependencies
[dev-dependencies]
wasm-bindgen-test = "0.3.50"
mockall = "0.13"
regex = "1.11"
once_cell = "1.21"

# Size optimizations
[profile.release]
opt-level = "z"     # Optimize for size even more aggressively
lto = "fat"         # More aggressive LTO
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller panic handling
strip = true        # Strip symbols for smaller size

[lints.clippy]
# No longer need to allow unsafe code since we eliminated it
# unsafe_code = "allow"
