[package]
name = "toboggan-wasm"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
toboggan-core = { path = "../toboggan-core", features = ["alloc", "js"] }
wasm-bindgen = { workspace = true }
gloo = { workspace = true }
web-sys = { workspace = true, features = [
  "HtmlElement",
  "KeyboardEvent", 
  "Event",
  "WebSocket",
  "MessageEvent",
  "CssStyleDeclaration",
  "Performance",
  "Window",
  "Document"
] }
js-sys = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
# Removed wee_alloc - deprecated and default allocator is now better


[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies.console_error_panic_hook]
workspace = true
optional = true

# Add test dependencies
[dev-dependencies]
wasm-bindgen-test = "0.3.43"
regex = "1.11"
once_cell = "1.21"

# Note: Size optimizations moved to workspace Cargo.toml

[lints.clippy]
# No longer need to allow unsafe code since we eliminated it
# unsafe_code = "allow"
